--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ Library/shadercompiler-UnityShaderCompiler.exe0.log
 Library/metadata/00/00000000000000002000000000000000
 *.bin
 Library/shadercompiler-UnityShaderCompiler.exe0.log
+*.log
+Library/shadercompiler-UnityShaderCompiler.exe0.log
