--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ Library/metadata/00/00000000000000002000000000000000
 Library/shadercompiler-UnityShaderCompiler.exe0.log
 *.log
 Library/shadercompiler-UnityShaderCompiler.exe0.log
+Library/shadercompiler-UnityShaderCompiler.exe0.log
